<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/my_app_portfolio"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp" />

    <Button
        android:id="@+id/spotify_streamer"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:layout_marginBottom="8dp"
        android:background="@drawable/myrect"
        android:stateListAnimator="@anim/my_animator"
        android:onClick="onClick"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/scores_app"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:layout_marginBottom="8dp"
        android:background="@drawable/myrect"
        android:stateListAnimator="@anim/my_animator"
        android:onClick="onClick"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/library_app"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:layout_marginBottom="8dp"
        android:background="@drawable/myrect"
        android:stateListAnimator="@anim/my_animator"
        android:onClick="onClick"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:layout_marginBottom="8dp"
        android:background="@drawable/myrect"
        android:stateListAnimator="@anim/my_animator"
        android:onClick="onClick"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/bacon_ready"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:layout_marginBottom="8dp"
        android:background="@drawable/myrect"
        android:stateListAnimator="@anim/my_animator"
        android:onClick="onClick"
        android:text="@string/bacon_reader" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:background="@drawable/myrect"
        android:stateListAnimator="@anim/my_animator"
        android:onClick="onClick"
        android:text="@string/capstone" />

</LinearLayout>
